client/css/main.css
/* ... */
				.visualization.table table tbody tr.show-rows span {
					margin: 0 15px;
				}

			.visualization.spatial-map .container {
				height: 500px;
			}
				.visualization.cohort table {
					width: 100%;
				}
					.visualization.cohort table td:first-child,
					.visualization.cohort table th:first-child {
						white-space: nowrap;
						min-width: 100px;
						border: 0;
					}
					.visualization.cohort table th.sticky,
					.visualization.cohort table td.sticky {
						position: sticky;
						left: 0;
						top: 0;
					}
					.visualization.cohort table th.sticky {
						z-index: 2;
						background: var(--color-primary);
					}
					.visualization.cohort table td.sticky {
						background: #fff;
					}
					.visualization.cohort table td.sticky:nth-child(2n) {
						background: #f1f1f9;
					}
					.visualization.cohort table .sticky:nth-child(2) {
						left: 100px;
					}
					.visualization.cohort th {
						white-space: nowrap;
					}
					.visualization.cohort td {
						text-align: center;
					}
					.visualization.cohort td.href {
						padding: 0;
					}
						.visualization.cohort td a {
							color: #333;
							display: block;
							padding: 8px 15px;
							transition: background var(--transition-duration),
										box-shadow var(--transition-duration);
						}
						.visualization.cohort td a:focus,
						.visualization.cohort td a:hover {
							background: rgba(0, 0, 0, 0.3);
							text-decoration: none;
						}
						.visualization.cohort td a:active {
							box-shadow: inset 0 0 25px rgba(0, 0, 0, 0.4);
						}


.visualization .container > svg {
	width: 100%;
	height: 500px;
	display: flex;
}
.visualization .container > svg .axis path,
.visualization .container > svg .axis line {
	fill: none;
	stroke: #ddd;
	stroke-width: 1px;
	fill: none;
	shape-rendering: crispEdges;
}

.visualization .container > svg .y path {
	display: none;
}

.visualization .container > svg .axis text {
	font-size: 11px;
}

.visualization .container > svg .y > .tick line,
.visualization .container > svg .x > .tick line,
.visualization .container > svg .x > path {
	z-index: -10;
}

.visualization .container > svg .y > .tick text {
	margin-right: 5px;
}

.visualization .container > svg text {
	fill: #333;
}
.visualization .container > svg text.NA {
	fill: #666;
}

.visualization .container > svg .axis-label {
	font-size: 12px;
}

.visualization .container > svg .line {
	fill: none;
	stroke: steelblue;
	stroke-width: 1.5px;
}

.visualization .container > svg .line-hover {
	stroke-width: 3px;
}

.visualization .container > svg .resetZoom {
	background-color: grey;
}

.visualization .container > svg .toggleReset {
	cursor: pointer;
	display: none !important;
}

.visualization .container > svg rect.zoom {
	fill: #8c97b4;
	fill-opacity: 0.5;
}

